# timber-cpp

./: .clang-format  .clangd  .gitmodules  CMakeLists.txt  timber-cppConfig.cmake.in
examples/: 01-default_logger.cpp  CMakeLists.txt
include/tmb/: tmb.hpp
